--- a/services/sql-driver/reports/jacoco/mtogo.sql.adapter.handlers/CustomerMenuRequestHandler.java.html
+++ b/services/sql-driver/reports/jacoco/mtogo.sql.adapter.handlers/CustomerMenuRequestHandler.java.html
@@ -33,7 +33,7 @@ public class CustomerMenuRequestHandler implements IMessageHandler {
         try {
 <span class="fc" id="L34">            String body = new String(</span>
 <span class="fc" id="L35">                    delivery.getBody(),</span>
-<span class="fc" id="L36">                    java.nio.charset.StandardCharsets.UTF_8);</span>
+                    java.nio.charset.StandardCharsets.UTF_8);
 <span class="fc" id="L37">            log.info(&quot;Received payload: {}&quot;, body);</span>
 
             // Parse &quot;correlationId:supplierId&quot;
@@ -71,17 +71,17 @@ public class CustomerMenuRequestHandler implements IMessageHandler {
 <span class="fc" id="L71">            log.error(&quot;Invalid supplierId format in request&quot;, e);</span>
             try {
 <span class="fc" id="L73">                channel.basicNack(deliveryTag, false, false); // Don't requeue bad format</span>
-<span class="pc" id="L74">            } catch (Exception nackError) {</span>
+<span class="nc" id="L74">            } catch (Exception nackError) {</span>
 <span class="nc" id="L75">                log.error(&quot;Failed to NACK message&quot;, nackError);</span>
-            }
+<span class="fc" id="L76">            }</span>
 <span class="nc" id="L77">        } catch (Exception e) {</span>
 <span class="nc" id="L78">            log.error(&quot;Error handling customer:menu_request&quot;, e);</span>
             try {
 <span class="nc" id="L80">                channel.basicNack(deliveryTag, false, false);</span>
 <span class="nc" id="L81">            } catch (Exception nackError) {</span>
 <span class="nc" id="L82">                log.error(&quot;Failed to NACK message&quot;, nackError);</span>
-            }
-        }
+<span class="nc" id="L83">            }</span>
+<span class="fc" id="L84">        }</span>
 <span class="fc" id="L85">    }</span>
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.14.202510111229</span></div></body></html>
