--- a/services/sql-driver/reports/jacoco/mtogo.sql.adapter.handlers/SupplierOrderCreationHandler.java.html
+++ b/services/sql-driver/reports/jacoco/mtogo.sql.adapter.handlers/SupplierOrderCreationHandler.java.html
@@ -35,7 +35,7 @@ public class SupplierOrderCreationHandler implements IMessageHandler {
 
         try {
 <span class="fc" id="L37">            LegacyOrderDetailsDTO legacyOrderDetailsDTO = objectMapper.readValue(delivery.getBody(),</span>
-<span class="fc" id="L38">                    LegacyOrderDetailsDTO.class);</span>
+                    LegacyOrderDetailsDTO.class);
 
 <span class="fc" id="L40">            OrderDetailsDTO enriched = service.call(legacyOrderDetailsDTO);</span>
 
@@ -51,10 +51,10 @@ public class SupplierOrderCreationHandler implements IMessageHandler {
 <span class="fc" id="L51">            log.error(e.getMessage());</span>
             try {
 <span class="fc" id="L53">                channel.basicNack(tag, false, false);</span>
-<span class="pc" id="L54">            } catch (IOException io) {</span>
+<span class="nc" id="L54">            } catch (IOException io) {</span>
 <span class="nc" id="L55">                log.error(&quot;Failed to NACK message&quot;, io);</span>
-            }
-        }
+<span class="fc" id="L56">            }</span>
+<span class="fc" id="L57">        }</span>
 <span class="fc" id="L58">    }</span>
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.14.202510111229</span></div></body></html>
