--- a/services/sql-driver/reports/jacoco/mtogo.sql.adapter.messaging/ConnectionManager.java.html
+++ b/services/sql-driver/reports/jacoco/mtogo.sql.adapter.messaging/ConnectionManager.java.html
@@ -3,65 +3,19 @@
 import java.io.IOException;
 import java.util.concurrent.TimeoutException;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import com.rabbitmq.client.Connection;
-import com.rabbitmq.client.ConnectionFactory;
 
 public class ConnectionManager {
 
-<span class="nc" id="L14">    private final Logger log = LoggerFactory.getLogger(this.getClass());</span>
-
-    private static ConnectionManager instance;
     private final Connection connection;
 
-<span class="nc" id="L19">    private ConnectionManager() throws IOException, TimeoutException, InterruptedException {</span>
-<span class="nc" id="L20">        ConnectionFactory factory = createDefaultFactory();</span>
-<span class="nc" id="L21">        this.connection = getConnectionOrRetry(factory);</span>
-<span class="nc" id="L22">    }</span>
-
-    public static synchronized ConnectionManager getConnectionManager() throws IOException, TimeoutException, InterruptedException {
-<span class="nc bnc" id="L25" title="All 2 branches missed.">        if (instance == null) {</span>
-<span class="nc" id="L26">            instance = new ConnectionManager();</span>
-        }
-<span class="nc" id="L28">        return instance;</span>
-    }
+    public ConnectionManager(IRabbitMQConnectionProvider provider)
+<span class="fc" id="L13">            throws IOException, TimeoutException, InterruptedException {</span>
+<span class="fc" id="L14">        this.connection = provider.getConnection();</span>
+<span class="fc" id="L15">    }</span>
 
     public Connection getConnection() {
-<span class="nc" id="L32">        return this.connection;</span>
-    }
-
-    // messagequeue might not be ready for connection accept on deploy, so we retry
-    // n times or crash
-    private Connection getConnectionOrRetry(ConnectionFactory connectionFactory) throws InterruptedException, IOException {
-
-<span class="nc bnc" id="L39" title="All 2 branches missed.">        for (int i = 0; i &lt; 10; i++) {</span>
-            try {
-<span class="nc" id="L41">                Connection conn = connectionFactory.newConnection(&quot;default-connection&quot;);</span>
-<span class="nc" id="L42">                return conn;</span>
-<span class="nc" id="L43">            } catch (IOException | TimeoutException e) {</span>
-<span class="nc" id="L44">                log.warn(&quot;Retrying rabbitmq connection&quot;);</span>
-<span class="nc" id="L45">                Thread.sleep(2000);</span>
-            }
-        }
-<span class="nc" id="L48">        throw new IOException(&quot;Failed connection to RabbitMQ&quot;);</span>
-    }
-
-    private ConnectionFactory createDefaultFactory() {
-<span class="nc" id="L52">        ConnectionFactory factory = new ConnectionFactory();</span>
-<span class="nc" id="L53">        factory.setHost(&quot;rabbitmq&quot;);</span>
-<span class="nc" id="L54">        factory.setPort(5672);</span>
-<span class="nc" id="L55">        factory.setUsername(System.getenv(&quot;RABBITMQ_USER&quot;));</span>
-<span class="nc" id="L56">        factory.setPassword(System.getenv(&quot;RABBITMQ_PASS&quot;));</span>
-<span class="nc" id="L57">        factory.setAutomaticRecoveryEnabled(true);</span>
-<span class="nc" id="L58">        factory.setNetworkRecoveryInterval(5000);</span>
-<span class="nc" id="L59">        factory.setTopologyRecoveryEnabled(true);</span>
-
-        // Heartbeat
-<span class="nc" id="L62">        factory.setRequestedHeartbeat(60);</span>
-
-<span class="nc" id="L64">        return factory;</span>
+<span class="fc" id="L18">        return connection;</span>
     }
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.14.202510111229</span></div></body></html>
