--- a/services/sql-driver/reports/jacoco/mtogo.sql.core/CustomerMenuRequestService.java.html
+++ b/services/sql-driver/reports/jacoco/mtogo.sql.core/CustomerMenuRequestService.java.html
@@ -18,24 +18,24 @@ import mtogo.sql.ports.out.IModelRepository;
  */
 public class CustomerMenuRequestService {
 
-<span class="nc" id="L21">    private final Logger log = LoggerFactory.getLogger(this.getClass());</span>
+<span class="fc" id="L21">    private final Logger log = LoggerFactory.getLogger(this.getClass());</span>
 
     private final IModelRepository repo;
 
-<span class="nc" id="L25">    public CustomerMenuRequestService(IModelRepository repo) {</span>
-<span class="nc" id="L26">        this.repo = repo;</span>
-<span class="nc" id="L27">    }</span>
+<span class="fc" id="L25">    public CustomerMenuRequestService(IModelRepository repo) {</span>
+<span class="fc" id="L26">        this.repo = repo;</span>
+<span class="fc" id="L27">    }</span>
 
     public List&lt;menuItemDTO&gt; call (int supplierId) throws Exception {
         
-<span class="nc" id="L31">            List&lt;menuItemDTO&gt; items = repo.getMenuItemsBySupplierId(supplierId);</span>
+<span class="fc" id="L31">            List&lt;menuItemDTO&gt; items = repo.getMenuItemsBySupplierId(supplierId);</span>
 
-<span class="nc bnc" id="L33" title="All 2 branches missed.">            if (items == null) {</span>
-<span class="nc" id="L34">                items = java.util.Collections.emptyList();</span>
+<span class="fc bfc" id="L33" title="All 2 branches covered.">            if (items == null) {</span>
+<span class="fc" id="L34">                items = java.util.Collections.emptyList();</span>
             }
 
-<span class="nc" id="L37">            log.debug(&quot;Found {} items for Supplier ID: {}&quot;, items.size(), supplierId);</span>
-<span class="nc" id="L38">            return items;</span>
+<span class="fc" id="L37">            log.debug(&quot;Found {} items for Supplier ID: {}&quot;, items.size(), supplierId);</span>
+<span class="fc" id="L38">            return items;</span>
     }
 }
 </pre><div class="footer"><span class="right">Created with <a href="http://www.jacoco.org/jacoco">JaCoCo</a> 0.8.14.202510111229</span></div></body></html>
